<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:background="#fff"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="100dp"
                android:paddingVertical="3dp"
                tools:ignore="UselessLeaf">

                <Button
                    android:id="@+id/btn_camera"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:layout_marginTop="48dp"
                    android:text="@string/custon_camera" />

                <ImageView
                    android:id="@+id/img_camera"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/custon_camera"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.526"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btn_camera"
                    app:srcCompat="@drawable/ic_launcher_background" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="50dp"
                android:paddingVertical="3dp"
                tools:ignore="UselessLeaf">

                <EditText
                    android:id="@+id/txt_codigo"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:inputType="numberSigned"
                    android:hint="@string/edt_codigo"/>

                <EditText
                    android:id="@+id/txt_nombres"
                    android:layout_marginStart="4dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:inputType="text"
                    android:hint="@string/edt_nombres"/>

                <EditText
                    android:id="@+id/txt_celular"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:inputType="phone"
                    android:hint="@string/edt_celular"/>


                <Button
                    android:id="@+id/btn_envio"
                    android:layout_width="320dp"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_mensaje" />

            </LinearLayout>

        </LinearLayout>


    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>